Make ContentInserted for captions more like ContentAppended and normal frame construction.  Bug 386014, r=bernd, sr=roc, a=dbaron